--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,14 @@
-
-
-
-
 body {
-    background-color: rgb(236, 234, 225);
+    background-color: rgb(225, 240, 240);
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
-    
 }
-
-
-
 .main-nav {
-    background-color: rgb(200, 180, 238);
+    background-color: rgb(129, 232, 245);
     top: 0;
     left: 0;
     display: flex;
@@ -26,57 +17,50 @@ body {
     width: 100%;
     height: 60px;
     padding: 0 20px;
-
-    
+    margin-bottom: 10px;
 }
-
 .main-nav ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
 }
-
 .main-nav ul li {
     margin: 0 10px;
     font-weight: 600;
+    font-family:monospace 
 }
-
 .main-nav ul li a {
     text-decoration: none;
     color: rgb(0, 0, 0);
     font-size: 1.2rem;
 }
-
 .main-nav ul li a:hover {
     color: rgb(11, 94, 94);
 }
-
 .main-nav ul li a:active {
     color: rgb(11, 94, 94);
 }
-
 .container {
     width: fit-content;
     height: fit-content;
-    background-color: rgba(200, 180, 238, 0.411);
+    background-color: rgb(205, 200, 214);
+    background-image: url("paper_clouds.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     border: 1px solid rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
     border-radius: 15px;
-    padding: 20px;
 }
-
 .container h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 700;
     color: rgb(0, 0, 0);
-    
 }
-
 .main {
     width: 100%;
     display: flex;
@@ -85,19 +69,16 @@ body {
     flex-direction: column;
     padding: 0 20px;
 }
-
 .main h2 {
     font-size: 2rem;
     font-weight: 700;
     color: rgb(0, 0, 0);
 }
-
 .main p {
     font-size: 1.2rem;
     font-weight: 400;
     color: rgb(0, 0, 0);
 }
-
 .main textarea {
     width: 80%;
     height: 200px;
@@ -107,7 +88,6 @@ body {
     font-weight: 400;
     color: rgb(0, 0, 0);
 }
-
 .main button {
     width: 20%;
     height: 40px;
@@ -116,17 +96,13 @@ body {
     font-size: 1.2rem;
     font-weight: 400;
     color: rgb(0, 0, 0);
-    background-color: rgb(200, 180, 238);
+    background-color: rgb(210, 239, 243);
     margin-top: 10px;
 }
-
+#copy {
+    margin-bottom: 30px;
+}
 .main button:hover {
     background-color: rgb(11, 94, 94);
     color: rgb(200, 180, 238);
 }
-
-
-
-
-
-
